<resources>
    <string name="app_name">ImpecusApp</string>
    <string name="title_activity_login">ImpecusApp</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">contraseña</string>
    <string name="action_sign_in">Iniciar sesion o registrarse</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">Usuario no valido</string>
    <string name="invalid_password">La contraseña debe ser mayor a 5 caracteres</string>
    <string name="login_failed">"Fallo el inicio de sesión"</string>
    <string name="log_in">Iniciar sesión</string>
    <string name="hint_user">Ingresa tu nombre de usuario</string>
    <string name="hint_password">Escribe tu contraseña</string>
    <string name="sign_up">Registrar</string>
    <string name="edtForgotPassword">¿Olvidaste tu contraseña?</string>
    <string name="register">O incia sesion con una red social</string>
    <string name="registerAccount">Registrar</string>
    <string name="country">Pais</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="phone">Telefono</string>
</resources>
