<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAndSingupActiviy"
    android:orientation="vertical"
    android:gravity="bottom|center_horizontal"
    android:background="@drawable/background_singup_and_singin">

    <Button
        android:id="@+id/btnLoginStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:background="@drawable/btn_login_background"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/btnSingUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_up"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edtForgotPassword"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        android:layout_marginBottom="30dp"/>

</LinearLayout>